<resources>
    <string name="app_name">STBLE</string>
    <string name="device">Device</string>
    <string name="datatosend">DatatoSend</string>
    <string name="sendtext">Send text</string>
    <string name="sendimage">Send image</string>
    <string name="import_image">Import Image</string>
    <string name="todo">TODO</string>
    <string name="device_name">device name</string>
    <string name="start_scanning">start scanning</string>
    <string name="send_one">send one packet</string>
    <string name="previous">Previous</string>
    <string name="next">Current</string>
</resources>